# crewai-tutorial

./: .gitignore  pyproject.toml  report.md
src/recruitment/: crew.py  main.py
src/recruitment/config/: agents.yaml  tasks.yaml
src/recruitment/tools/: client.py  driver.py  linkedin.py
